--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest,windows-latest,macOs-latest]
+        os: [ubuntu-18.04,windows-2019,macOs-10.15]
 
     steps:
     - uses: shivammathur/setup-php@b7d1d9c9a92d8d8463ce36d7f60da34d461724f8
